Corrigindo após o professor comentar.

--- a/1-receita/index.html
+++ b/1-receita/index.html
@@ -1,44 +1,45 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <title>Receita de Bolo de Cenoura</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    <h1>Receita de Bolo de Cenoura</h1>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Receita de Bolo de Cenoura</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main>
+      <header>
+        <h1>Receita de Bolo de Cenoura</h1>
+      </header>
 
-  <main>
-    <section class="introducao">
-      <img src="https://th.bing.com/th/id/OIP.ysksWwez1lcJB9NWKbOtyAHaFJ?w=292&h=203&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" 
-      alt="Bolo de cenoura" 
-      class="imagembolo">
-    </section>
+      <section class="introducao">
+        <img
+          src="https://th.bing.com/th/id/OIP.ysksWwez1lcJB9NWKbOtyAHaFJ?w=292&h=203&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3"
+          alt="Bolo de cenoura fatiado em um prato"
+        />
+        <p>Um clássico fofinho e delicioso com cobertura de chocolate!</p>
+      </section>
 
-    <section class="ingredientes">
-      <h2>Ingredientes</h2>
-      <ul>
-        <li>3 cenouras médias raladas</li>
-        <li>3 ovos</li>
-        <li>1 xícara de óleo</li>
-        <li>2 xícaras de açúcar</li>
-        <li>2 e 1/2 xícaras de farinha de trigo</li>
-        <li>1 colher (sopa) de fermento em pó</li>
-      </ul>
-    </section>
+      <section class="ingredientes">
+        <h2>Ingredientes</h2>
+        <ul>
+          <li>3 cenouras médias raladas</li>
+          <li>3 ovos</li>
+          <li>1 xícara de óleo</li>
+          <li>2 xícaras de açúcar</li>
+          <li>2 e 1/2 xícaras de farinha de trigo</li>
+          <li>1 colher (sopa ) de fermento em pó</li>
+        </ul>
+      </section>
 
-    <section class="preparo">
-      <h2>Modo de Preparo</h2>
-      <ol>
-        <li>Bata no liquidificador as cenouras, os ovos e o óleo.</li>
-        <li>Em uma tigela, misture o creme com o açúcar e a farinha.</li>
-        <li>Adicione o fermento e misture suavemente.</li>
-        <li>Asse em forno pré-aquecido a 180°C por 40 minutos.</li>
-      </ol>
-    </section>
-  </main>
-
-</body>
+      <section class="preparo">
+        <h2>Modo de Preparo</h2>
+        <ol>
+          <li>Bata no liquidificador as cenouras, os ovos e o óleo.</li>
+          <li>Em uma tigela, misture o creme com o açúcar e a farinha.</li>
+          <li>Adicione o fermento e misture suavemente.</li>
+          <li>Asse em forno pré-aquecido a 180°C por 40 minutos.</li>
+        </ol>
+      </section>
+    </main>
+  </body>
 </html>
