--- a/4-login/index.html
+++ b/4-login/index.html
@@ -7,23 +7,25 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <div class="formulario-login">
-      <h2>LOGIN APLHA</h2>
-      <form>
-        <div class="entrada">
-          <input type="text" placeholder="Usuário" required>
-        </div>
-        <div class="entrada">
-          <input type="password" placeholder="Senha" required>
-        </div>
-        <button type="submit">LOGIN</button>
-        <div class="esqueceu-senha">
-          <a href="">Esqueceu sua senha?</a>
-        </div>
-      </form>
+  <div class="container-login">
+    <div class="logo">
+      <span>A</span>
     </div>
+    <h2>Bem Vindo</h2>
+    <form>
+      <div class="entrada">
+        <label for="email">Email</label>
+        <input type="email" id="email" required>
+      </div>
+      <div class="entrada">
+        <label for="senha">Senha</label>
+        <input type="password" id="senha" required>
+      </div>
+      <button type="submit">LOGIN</button>
+      <div class="link-cadastro">
+        <p>Não tem uma conta?<a href="#">Cadastre-se</a></p>
+      </div>
+    </form>
   </div>
 </body>
 </html>
-
